--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;400;600&family=Spartan:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Jakub Wywrocki - Portfolio</title>
 </head>
 <body>
+    <nav class="navigation">
+        <div class="socials">
+            <a href="https://github.com/jwywrocki"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <!-- <i class="fab fa-facebook-f"></i> -->
+        </div>
+        <ul>
+            <li><a href="#about"><i class="far fa-address-card"></i>O mnie</a></li>
+            <li><a href="#projects"><i class="fas fa-tasks"></i>Projekty</a></li>
+            <li><a href="#contact"><i class="far fa-envelope"></i>Kontakt</a></li>
+        </ul>
+    </nav>
     <header>
-        <nav class="navigation flex">
-            <div class="socials">
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-facebook-f"></i>
-            </div>
-            <ul>
-                <li><a href="#about"><i class="far fa-address-card"></i>O mnie</a></li>
-                <li><a href="#projects"><i class="fas fa-tasks"></i>Projekty</a></li>
-                <li><a href="#contact"><i class="far fa-envelope"></i>Kontakt</a></li>
-            </ul>
-        </nav>
+        <h1>Work in progress</h1>
     </header>
     <main>
         <article id="about">
