Smooth scroll and scroll top button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Jakub Wywrocki - Portfolio</title>
 </head>
 <body>
+    <i class="fas fa-arrow-circle-up scrollTop"></i>
     <nav class="navigation">
         <div class="socials">
             <a href="https://github.com/jwywrocki"><i class="fab fa-github"></i></a>
