added menu behavior and hover fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;400;600&family=Spartan:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="./img/icon.ico" type="image/x-icon">
     <title>Jakub Wywrocki - Portfolio</title>
 </head>
 <body>
@@ -51,13 +52,26 @@
         <section id="about" class="section">
             <h1>About me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quaerat sint animi ut illum obcaecati deleniti. Ut, deleniti porro. Error non vel animi incidunt sunt!</p>
+            <img src="./img/img.png" alt="Photograph">
         </section>
         <section id="projects" class="section">
             <h1>Projects</h1>
             <div class="projects__container">
                 <div class="container__card">
-                    <img src="" alt="">
-                    <h2 class="card__title"></h2>
+                    <img src="" class="card__image" alt="">
+                    <h2 class="card__title">Project 1</h2>
+                </div>
+                <div class="container__card">
+                    <img src="" class="card__image" alt="">
+                    <h2 class="card__title">Project 2</h2>
+                </div>
+                <div class="container__card">
+                    <img src="" class="card__image" alt="">
+                    <h2 class="card__title">Project 3</h2>
+                </div>
+                <div class="container__card">
+                    <img src="" class="card__image" alt="">
+                    <h2 class="card__title">Project 4</h2>
                 </div>
             </div>
         </section>
