--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
         <a href="#projects" class="button--primary">Check out my projects!</a>
     </header>
     <main class="content">
-        <section id="about" class="section">
-            <h1>About me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quaerat sint animi ut illum obcaecati deleniti. Ut, deleniti porro. Error non vel animi incidunt sunt!</p>
-            <img src="./img/img.png" alt="Photograph">
+        <section id="about" class="about">
+            <div class="about__text">
+                <h1>About me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quaerat sint animi ut illum obcaecati deleniti. Ut, deleniti porro. Error non vel animi incidunt sunt!</p>
+            </div>
+            <div class="about__image">
+                <img src="./img/img.png" alt="Photograph">
+            </div>
         </section>
-        <section id="projects" class="section">
+        <section id="projects" class="projects">
             <h1>Projects</h1>
             <div class="projects__container">
                 <div class="container__card">
@@ -75,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="section">
+        <section id="contact" class="contact">
             <h1>Contact</h1>
         </section>
     </main>
