--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </svg>
         </a>
         <ul class="navigation__container">
-            <li><a href="#about" class="navigation__item"><i class="far fa-address-card"></i>O mnie</a></li>
-            <li><a href="#projects" class="navigation__item"><i class="fas fa-tasks"></i>Projekty</a></li>
-            <li><a href="#contact" class="navigation__item"><i class="far fa-envelope"></i>Kontakt</a></li>
+            <li><a href="#about" class="navigation__item"><i class="far fa-address-card"></i>About me</a></li>
+            <li><a href="#projects" class="navigation__item"><i class="fas fa-tasks"></i>Projects</a></li>
+            <li><a href="#contact" class="navigation__item"><i class="far fa-envelope"></i>Contact</a></li>
             <li>
                 <a href="./Jakub_Wywrocki_CV.pdf" class="button--primary">Resume</a>
             </li>
@@ -47,6 +47,10 @@
             <h2>I have <span class="text--primary">BS degree in IT</span> and I am a <span class="text--primary">Junior</span> Front-end Developer with MERN stack basics.</h2>
         </div>
         <a href="#projects" class="button--primary">Check out my projects!</a>
+        <div class="header__socials">
+            <a href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a" class="socials__link"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/jwywrocki" class="socials__link"><i class="fab fa-github"></i></a>
+        </div>
     </header>
     <main class="content">
         <section id="about" class="about">
@@ -54,28 +58,36 @@
                 <h1>About me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quaerat sint animi ut illum obcaecati deleniti. Ut, deleniti porro. Error non vel animi incidunt sunt!</p>
             </div>
-            <div class="about__image">
-                <img src="./img/img.png" alt="Photograph">
+            <div class="image__container">
+                <img src="./img/img.png" class="about__image" alt="Photograph">
             </div>
         </section>
         <section id="projects" class="projects">
-            <h1>Projects</h1>
+            <h1>Some of my projects</h1>
             <div class="projects__container">
-                <div class="container__card">
-                    <img src="" class="card__image" alt="">
-                    <h2 class="card__title">Project 1</h2>
+                <div class="projects__card">
+                    <img src="./img/projects/task_1.png" class="card__image" alt="Project task_1 screenshot">
+                    <div class="card__text">
+                        <h2 class="card__title">Task 1</h2>
+                    </div>
                 </div>
-                <div class="container__card">
-                    <img src="" class="card__image" alt="">
-                    <h2 class="card__title">Project 2</h2>
+                <div class="projects__card">
+                    <img src="./img/projects/task_1.png" class="card__image" alt="Project task_1 screenshot">
+                    <div class="card__text">
+                        <h2 class="card__title">Task 2</h2>
+                    </div>
                 </div>
-                <div class="container__card">
-                    <img src="" class="card__image" alt="">
-                    <h2 class="card__title">Project 3</h2>
+                <div class="projects__card">
+                    <img src="./img/projects/task_1.png" class="card__image" alt="Project task_1 screenshot">
+                    <div class="card__text">
+                        <h2 class="card__title">Task 3</h2>
+                    </div>
                 </div>
-                <div class="container__card">
-                    <img src="" class="card__image" alt="">
-                    <h2 class="card__title">Project 4</h2>
+                <div class="projects__card">
+                    <img src="./img/projects/task_1.png" class="card__image" alt="Project task_1 screenshot">
+                    <div class="card__text">
+                        <h2 class="card__title">Task 4</h2>
+                    </div>
                 </div>
             </div>
         </section>
