--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </svg>
         </a>
         <ul class="navigation__container">
-            <li><a href="#about" class="navigation__item"><i class="far fa-address-card"></i>About me</a></li>
-            <li><a href="#projects" class="navigation__item"><i class="fas fa-tasks"></i>Projects</a></li>
-            <li><a href="#contact" class="navigation__item"><i class="far fa-envelope"></i>Contact</a></li>
+            <li><a href="#about" class="navigation__item">About me</a></li>
+            <li><a href="#projects" class="navigation__item">Projects</a></li>
+            <li><a href="#contact" class="navigation__item">Contact</a></li>
             <li>
                 <a href="./Jakub_Wywrocki_CV.pdf" class="button--primary">Resume</a>
             </li>
@@ -58,7 +58,7 @@
                 <h1>About me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quaerat sint animi ut illum obcaecati deleniti. Ut, deleniti porro. Error non vel animi incidunt sunt!</p>
             </div>
-            <div class="image__container">
+            <div class="about__image-container">
                 <img src="./img/img.png" class="about__image" alt="Photograph">
             </div>
         </section>
