new idea about projects section

--- a/index.html
+++ b/index.html
@@ -119,10 +119,20 @@
                                 alt="Project task_1 screenshot"
                             />
                         </div>
-                        <div class="card__text">
-                            <h2 class="card__title">Task 1</h2>
+                        <div class="card__info">
+                            <h2 class="card__title">JS Arrays</h2>
                             <span>Description</span>
+                            <p>
+                                The task is to write a JavaScript script which,
+                                after clicking on the button, will generate 20
+                                random integers from 1 to 100 and place them in
+                                two columns. One column should contain only even
+                                numbers and the other one odd numbers.
+                                Additionally, both columns must be sorted in
+                                ascending order.
+                            </p>
                             <span>Tech stack</span>
+                            <p>HTML CSS JS</p>
                         </div>
                     </div>
                     <div class="projects__card">
@@ -132,8 +142,30 @@
                                 alt="Project task_2 screenshot"
                             />
                         </div>
-                        <div class="card__text">
-                            <h2 class="card__title">Task 2</h2>
+                        <div class="card__info">
+                            <h2 class="card__title">Book List</h2>
+                            <span>Description</span>
+                            <p>
+                                Your task is to write your own book library
+                                using HTML, CSS and JavaScript, which will
+                                contain a form that accepts the following
+                                fields: a) Book title (at least 1 character) b)
+                                Book author (at least 3 characters) c) Reading
+                                priority (numbers from 1 do 5) d) List with
+                                categories (3 categories to choose from) e)
+                                Button enabling sending After sending the form,
+                                the page cannot be reloaded. Simultaneously
+                                display the added book in the table, clear the
+                                form. Acceptance criteria: • Validation for form
+                                fields. In case a field is not validated, the
+                                book cannot be added. • The user can add another
+                                book to the table • The whole table is saved in
+                                localstorage (when the browser is reopened, it
+                                is reloaded and displayed with the same state as
+                                it was when it was closed).
+                            </p>
+                            <span>Tech stack</span>
+                            <p>HTML CSS JS</p>
                         </div>
                     </div>
                     <div class="projects__card">
@@ -143,8 +175,19 @@
                                 alt="Project task_3 screenshot"
                             />
                         </div>
-                        <div class="card__text">
-                            <h2 class="card__title">Task 3</h2>
+                        <div class="card__info">
+                            <h2 class="card__title">Random Quote Generator</h2>
+                            <span>Description</span>
+                            <p>
+                                Preparing an application that will retrieve
+                                quotes from the API, which will display a random
+                                quotation. Additionally, create a button that
+                                will allow you to draw the next quote and a
+                                button that will allow you to return to the
+                                previous quote.
+                            </p>
+                            <span>Tech stack</span>
+                            <p>HTML CSS React API</p>
                         </div>
                     </div>
                     <div class="projects__card">
@@ -154,8 +197,20 @@
                                 alt="Project task_4 screenshot"
                             />
                         </div>
-                        <div class="card__text">
-                            <h2 class="card__title">Task 4</h2>
+                        <div class="card__info">
+                            <h2 class="card__title">Weather APP</h2>
+                            <span>Description</span>
+                            <p>
+                                The task is to write a JavaScript script which,
+                                after clicking on the button, will generate 20
+                                random integers from 1 to 100 and place them in
+                                two columns. One column should contain only even
+                                numbers and the other one odd numbers.
+                                Additionally, both columns must be sorted in
+                                ascending order.
+                            </p>
+                            <span>Tech stack</span>
+                            <p>HTML CSS React API</p>
                         </div>
                     </div>
                 </div>
