mobile display fix

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </header>
         <main class="content">
-            <section id="about" class="about">
+            <section id="about" class="about content__section">
                 <div class="about__text">
                     <h1>About me</h1>
                     <p>
@@ -109,7 +109,7 @@
                     />
                 </div>
             </section>
-            <section id="projects" class="projects">
+            <section id="projects" class="projects content__section">
                 <h1>Some of my projects</h1>
                 <div class="projects__container">
                     <div class="projects__card">
@@ -171,7 +171,7 @@
                     <div class="projects__card">
                         <div class="card__image">
                             <img
-                                src="./img/projects/task_1.png"
+                                src="./img/projects/random_quote_generator.png"
                                 alt="Project task_3 screenshot"
                             />
                         </div>
@@ -193,7 +193,7 @@
                     <div class="projects__card">
                         <div class="card__image">
                             <img
-                                src="./img/projects/task_1.png"
+                                src="./img/projects/task_4.png"
                                 alt="Project task_4 screenshot"
                             />
                         </div>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </section>
-            <section id="contact" class="contact">
+            <section id="contact" class="contact content__section">
                 <h1>Contact</h1>
             </section>
         </main>
