some improvements with projects

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">JS Arrays</h2>
-                            <span>Description</span>
                             <p>
                                 The task is to write a JavaScript script which,
                                 after clicking on the button, will generate 20
@@ -133,6 +132,22 @@
                             </p>
                             <span>Tech stack</span>
                             <p>HTML CSS JS</p>
+                            <div class="card__links">
+                                <a
+                                    href="https://github.com/jwywrocki/task_1"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a
+                                    href="https://jwywrocki.github.io/task_1/"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fas fa-globe-americas"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="projects__card">
@@ -144,7 +159,6 @@
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">Book List</h2>
-                            <span>Description</span>
                             <p>
                                 Your task is to write your own book library
                                 using HTML, CSS and JavaScript, which will
@@ -166,18 +180,33 @@
                             </p>
                             <span>Tech stack</span>
                             <p>HTML CSS JS</p>
+                            <div class="card__links">
+                                <a
+                                    href="https://github.com/jwywrocki/task_2"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a
+                                    href="https://jwywrocki.github.io/task_2/"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fas fa-globe-americas"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="projects__card">
                         <div class="card__image">
                             <img
-                                src="./img/projects/random_quote_generator.png"
+                                src="./img/projects/random-quote-generator.png"
                                 alt="Project task_3 screenshot"
                             />
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">Random Quote Generator</h2>
-                            <span>Description</span>
                             <p>
                                 Preparing an application that will retrieve
                                 quotes from the API, which will display a random
@@ -188,6 +217,22 @@
                             </p>
                             <span>Tech stack</span>
                             <p>HTML CSS React API</p>
+                            <div class="card__links">
+                                <a
+                                    href="https://github.com/jwywrocki/random-quote-generator"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a
+                                    href="https://jwywrocki.github.io/random-quote-generator/"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fas fa-globe-americas"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="projects__card">
@@ -198,8 +243,9 @@
                             />
                         </div>
                         <div class="card__info">
-                            <h2 class="card__title">Weather APP</h2>
-                            <span>Description</span>
+                            <h2 class="card__title">
+                                Weather APP (In progress)
+                            </h2>
                             <p>
                                 The task is to write a JavaScript script which,
                                 after clicking on the button, will generate 20
@@ -211,6 +257,22 @@
                             </p>
                             <span>Tech stack</span>
                             <p>HTML CSS React API</p>
+                            <div class="card__links">
+                                <a
+                                    href="https://github.com/jwywrocki/task_4"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a
+                                    href="https://jwywrocki.github.io/task_4/"
+                                    target="_blank"
+                                    class="button--primary"
+                                >
+                                    <i class="fas fa-globe-americas"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
