margin content fix for mobile devices

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <title>Jakub Wywrocki - Portfolio</title>
     </head>
     <body>
-        <!-- <i class="fas fa-arrow-circle-up scrollTop"></i> -->
         <nav class="navigation">
             <a href="#">
                 <svg
@@ -59,9 +58,9 @@
                 </li>
                 <li><a href="#contact" class="navigation__item">Contact</a></li>
                 <li>
-                    <a href="./Jakub_Wywrocki_CV.pdf" class="button--primary"
-                        >Resume</a
-                    >
+                    <a href="./Jakub_Wywrocki_CV.pdf" class="button--primary">
+                        Resume
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -77,28 +76,36 @@
                     Developer with MERN stack basics.
                 </h2>
             </div>
-            <a href="#projects" class="button--primary"
-                >Check out my projects!</a
-            >
+            <a href="#projects" class="button--primary">
+                Check out my projects!
+            </a>
             <div class="header__socials">
                 <a
                     href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
                     class="socials__link"
-                    ><i class="fab fa-linkedin-in"></i
-                ></a>
-                <a href="https://github.com/jwywrocki" class="socials__link"
-                    ><i class="fab fa-github"></i
-                ></a>
+                >
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/jwywrocki" class="socials__link">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
         </header>
         <main class="content">
             <section id="about" class="about content__section">
                 <div class="about__text">
-                    <h1>About me</h1>
+                    <h1 class="section__title">About me</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Nam quaerat sint animi ut illum obcaecati deleniti. Ut,
-                        deleniti porro. Error non vel animi incidunt sunt!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Blanditiis tenetur repellendus earum fugit
+                        voluptatibus eum, perferendis nihil inventore saepe
+                        necessitatibus error eius ad, cum quidem numquam,
+                        repellat rem cumque officia. Necessitatibus corporis nam
+                        inventore fugit optio? Consequuntur possimus doloremque
+                        qui molestiae, et voluptate, veritatis temporibus
+                        architecto nostrum expedita fugiat amet. Laborum
+                        voluptatem obcaecati sint alias dolor similique quidem
+                        corrupti itaque!
                     </p>
                 </div>
                 <div class="about__image-container">
@@ -110,7 +117,7 @@
                 </div>
             </section>
             <section id="projects" class="projects content__section">
-                <h1>Some of my projects</h1>
+                <h1 class="section__title" class="section__title">Some of my projects</h1 class="section__title">
                 <div class="projects__container">
                     <div class="projects__card">
                         <div class="card__image">
@@ -278,7 +285,7 @@
                 </div>
             </section>
             <section id="contact" class="contact content__section">
-                <h1>Contact</h1>
+                <h1 class="section__title">Contact</h1>
             </section>
         </main>
         <footer>© 2022 Jakub Wywrocki</footer>
