color fix, about page improvments

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     I have
                     <span class="text--primary">BS degree in IT</span> and I am
                     a <span class="text--primary">Junior</span> Front-end
-                    Developer with MERN stack basics.
+                    Developer with MERN stack basic knowledge.
                 </h2>
             </div>
             <a href="#projects" class="button--primary">
@@ -93,31 +93,51 @@
         </header>
         <main class="content">
             <section id="about" class="about content__section">
-                <div class="about__text">
-                    <h1 class="section__title">About me</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Blanditiis tenetur repellendus earum fugit
-                        voluptatibus eum, perferendis nihil inventore saepe
-                        necessitatibus error eius ad, cum quidem numquam,
-                        repellat rem cumque officia. Necessitatibus corporis nam
-                        inventore fugit optio? Consequuntur possimus doloremque
-                        qui molestiae, et voluptate, veritatis temporibus
-                        architecto nostrum expedita fugiat amet. Laborum
-                        voluptatem obcaecati sint alias dolor similique quidem
-                        corrupti itaque!
-                    </p>
+                <h1 class="section__title">About me</h1>
+                <div class="about__info">
+                    <div class="about__text">
+                        <p>
+                            Hello! My name is Jakub and I knew from an early age
+                            that I would tie my future with IT. In the last
+                            years of my studies, I became interested in creating
+                            websites. I begin as Frontend Developer but my goal
+                            is to become Fullstack Developer in the future.
+                        </p>
+                        <p>
+                            I completed a three-month internship as a Frontend
+                            Web Developer at Primeo. During the internship, I
+                            learned a lot about teamwork on real projects for
+                            local clients and from abroad. Now when I finished
+                            my studies with a bachelor's degree in computer
+                            science I keep learning and looking for job. If you
+                            are intersted contact with me.
+                        </p>
+                    </div>
+                    <div class="about__image">
+                        <img src="./img/img.png" alt="Photograph" />
+                    </div>
                 </div>
-                <div class="about__image-container">
-                    <img
-                        src="./img/img.png"
-                        class="about__image"
-                        alt="Photograph"
-                    />
+                <div class="about__links">
+                    <a
+                        href="https://github.com/jwywrocki"
+                        class="button--primary"
+                    >
+                        Vist me on GitHub
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                        href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                        class="button--primary"
+                    >
+                        Vist me on LinkedIn
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
                 </div>
             </section>
             <section id="projects" class="projects content__section">
-                <h1 class="section__title" class="section__title">Some of my projects</h1 class="section__title">
+                <h1 class="section__title" class="section__title">
+                    Some of my projects
+                </h1>
                 <div class="projects__container">
                     <div class="projects__card">
                         <div class="card__image">
