font size adjustments for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                             local clients and from abroad. Now when I finished
                             my studies with a bachelor's degree in computer
                             science I keep learning and looking for job. If you
-                            are intersted contact with me.
+                            are intersted in my person
+                            <a href="#contact" class="text--primary">contact</a>
+                            with me.
                         </p>
                     </div>
                     <div class="about__image">
