some adjustments and readme.md added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="card__info">
                             <h2 class="card__title">JS Arrays</h2>
                             <p>
-                                The task is to write a JavaScript script which,
+                                The task was to write a JavaScript script which,
                                 after clicking on the button, will generate 20
                                 random integers from 1 to 100 and place them in
                                 two columns. One column should contain only even
@@ -159,8 +159,10 @@
                                 Additionally, both columns must be sorted in
                                 ascending order.
                             </p>
-                            <span>Tech stack</span>
-                            <p>HTML CSS JS</p>
+                            <div class="card__tech">
+                                <span>Tech stack</span>
+                                <p>HTML CSS JS</p>
+                            </div>
                             <div class="card__links">
                                 <a
                                     href="https://github.com/jwywrocki/task_1"
@@ -189,26 +191,18 @@
                         <div class="card__info">
                             <h2 class="card__title">Book List</h2>
                             <p>
-                                Your task is to write your own book library
-                                using HTML, CSS and JavaScript, which will
-                                contain a form that accepts the following
-                                fields: a) Book title (at least 1 character) b)
-                                Book author (at least 3 characters) c) Reading
-                                priority (numbers from 1 do 5) d) List with
-                                categories (3 categories to choose from) e)
-                                Button enabling sending After sending the form,
-                                the page cannot be reloaded. Simultaneously
-                                display the added book in the table, clear the
-                                form. Acceptance criteria: • Validation for form
-                                fields. In case a field is not validated, the
-                                book cannot be added. • The user can add another
-                                book to the table • The whole table is saved in
-                                localstorage (when the browser is reopened, it
-                                is reloaded and displayed with the same state as
-                                it was when it was closed).
+                                The task was to write simple book list using
+                                HTML, CSS and JavaScript. After sending the
+                                form, the page cannot be reloaded.
+                                Simultaneously display the added book in the
+                                table, and clear the form. In case a field is
+                                not validated, the book cannot be added. The
+                                whole table is saved in localstorage.
                             </p>
-                            <span>Tech stack</span>
-                            <p>HTML CSS JS</p>
+                            <div class="card__tech">
+                                <span>Tech stack</span>
+                                <p>HTML CSS JS</p>
+                            </div>
                             <div class="card__links">
                                 <a
                                     href="https://github.com/jwywrocki/task_2"
@@ -237,15 +231,17 @@
                         <div class="card__info">
                             <h2 class="card__title">Random Quote Generator</h2>
                             <p>
-                                Preparing an application that will retrieve
-                                quotes from the API, which will display a random
-                                quotation. Additionally, create a button that
-                                will allow you to draw the next quote and a
-                                button that will allow you to return to the
-                                previous quote.
+                                The goal was to create an application that will
+                                retrieve quotes from the API, which will display
+                                a random quotation. Additionally I created a
+                                button that will allow to draw the next random
+                                quote and a button that will allow to return to
+                                the previous quote.
                             </p>
-                            <span>Tech stack</span>
-                            <p>HTML CSS React API</p>
+                            <div class="card__tech">
+                                <span>Tech stack</span>
+                                <p>HTML CSS React API</p>
+                            </div>
                             <div class="card__links">
                                 <a
                                     href="https://github.com/jwywrocki/random-quote-generator"
@@ -273,19 +269,16 @@
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">
-                                Weather APP (In progress)
+                                Weather APP (Work in progress)
                             </h2>
                             <p>
-                                The task is to write a JavaScript script which,
-                                after clicking on the button, will generate 20
-                                random integers from 1 to 100 and place them in
-                                two columns. One column should contain only even
-                                numbers and the other one odd numbers.
-                                Additionally, both columns must be sorted in
-                                ascending order.
+                                The goal is to create an application that will
+                                retrive weather data from API and display it.
                             </p>
-                            <span>Tech stack</span>
-                            <p>HTML CSS React API</p>
+                            <div class="card__tech">
+                                <span>Tech stack</span>
+                                <p>HTML CSS React API</p>
+                            </div>
                             <div class="card__links">
                                 <a
                                     href="https://github.com/jwywrocki/task_4"
@@ -308,6 +301,16 @@
             </section>
             <section id="contact" class="contact content__section">
                 <h1 class="section__title">Contact</h1>
+                Contact form will appear here soon for now you can reach me via
+                <a href="mailto:jaqb1991@gmail.com" class="button--primary"
+                    ><i class="fas fa-at"></i
+                ></a>
+                <a
+                    href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                    class="button--primary"
+                >
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
             </section>
         </main>
         <footer>© 2022 Jakub Wywrocki</footer>
