--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">
-                                Weather APP (Work in progress)
+                                Weather APP<br />(Work in progress)
                             </h2>
                             <p>
                                 The goal is to create an application that will
